objects/ssot__PatientMedicalProcedure__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssertionSourceId__c</fullName>
        <label>Assertion Source</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssertionSourceObjectName__c</fullName>
        <label>Assertion Source Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterId__c</fullName>
        <label>Clinical Encounter</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosticSummaryId__c</fullName>
        <label>Diagnostic Summary</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationTimeStringText__c</fullName>
        <label>Duration Time String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedDurationUnitId__c</fullName>
        <label>EstimatedDurationUnit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedLowerDurationNumber__c</fullName>
        <label>Estimated Lower Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedLowerDurationUnitId__c</fullName>
        <label>EstimatedLowerDurationUnit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedLowerLengthNumber__c</fullName>
        <label>Estimated Lower Length</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedLowerLengthUnitId__c</fullName>
        <label>EstimatedLowerLengthUnit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedUpperDurationNumber__c</fullName>
        <label>Estimated Upper Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedUpperDurationUnitId__c</fullName>
        <label>EstimatedUpperDurationUnit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedUpperLengthNumber__c</fullName>
        <label>Estimated Upper Length</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedUpperLengthUnitId__c</fullName>
        <label>EstimatedUpperLengthUnit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareFacilityId__c</fullName>
        <label>Healthcare Facility</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareProcedureId__c</fullName>
        <label>Healthcare Procedure</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Patient Medical Procedure Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientId__c</fullName>
        <label>Patient</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientMedProcdStatusReasonCodeId__c</fullName>
        <label>Patient Med Proc Status Reason Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientMedicalProcedureCodeId__c</fullName>
        <label>Patient Medical Procedure Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientMedicalProcedureEndDate__c</fullName>
        <label>Patient Medical Procedure End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PatientMedicalProcedureOutcomeCode__c</fullName>
        <label>Patient Medical Procedure Outcome Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientMedicalProcedureReasonCode__c</fullName>
        <label>Patient Medical Procedure Reason Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientMedicalProcedureStartDate__c</fullName>
        <label>Patient Medical Procedure Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PatientMedicalProcedureStatus__c</fullName>
        <label>Patient Medical Procedure Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientMedicalProcedureTypeId__c</fullName>
        <label>Patient Medical Procedure Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PerformedAgeRangeUOMd__c</fullName>
        <label>Performed Age Range Unit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PerformedAtAgeLowerLimitNumber__c</fullName>
        <label>Performed At AgeLower Limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PerformedAtAgeNumber__c</fullName>
        <label>Performed At Age</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PerformedAtAgeUOMId__c</fullName>
        <label>Performed At Age Unit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PerformedAtAgeUpperLimitNumber__c</fullName>
        <label>Performed At Age Upper Limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProcedureAgeNumber__c</fullName>
        <label>Procedure Age</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProcedureAgeUOMId__c</fullName>
        <label>Procedure Age Unit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReasonReferenceId__c</fullName>
        <label>Reason Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReasonReferenceObjectName__c</fullName>
        <label>Reason Reference Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordCreatedById__c</fullName>
        <label>Record Created By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordCreatedByObjectName__c</fullName>
        <label>Record Created By Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725641856_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicalProcedure_AssertionSou_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PatientMedicalProcedure_AssertionSou_rel</relationshipLabel>
        <relationshipName>rel_1716725641856_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725643413_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicalProcedure_HealthcarePr_rel</label>
        <referenceTo>ssot__HealthcareProcedure__dlm</referenceTo>
        <relationshipLabel>PatientMedicalProcedure_HealthcarePr_rel</relationshipLabel>
        <relationshipName>rel_1716725643413_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725652375_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicalProcedure_AssertionSou_rel</label>
        <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
        <relationshipLabel>PatientMedicalProcedure_AssertionSou_rel</relationshipLabel>
        <relationshipName>rel_1716725652375_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>